fixed button on homescreen overlaying navbar on mobile

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,7 @@
     border: 1px solid #8536df;
     margin: 1rem 10%;
     height: 50px;
+    z-index: 999 !important;
 }
 
 .nav-links {
